--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -20,8 +20,13 @@ jobs:
       - name: Compile project using Maven
         run: mvn --batch-mode --update-snapshots compile
 
-      - name: Notarize Java Maven project with BoM
+      - name: Authenticate Java Maven project with BoM
         #--> Run the GitHub action
+        # This 'env' block is necessary because github actions will try to pass the current variables for JAVA_HOME and JDK_HOME to the container
+        # only include this if your workflow uses the 'setup-java' actions or sets those environment varialbes (JAVA_HOME, PATH)
+        env:
+           JAVA_HOME: /usr/local/openjdk-17
+           PATH: /usr/local/openjdk-17/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
         # uses: codenotary/vcn-notarize-bom-java-github-action@v1.0.0
         uses: codenotary/vcn-authenticate-bom-java-github-action@main
         with:
@@ -39,9 +44,14 @@ jobs:
       - name: Build JAR using Maven
         run: mvn --batch-mode --update-snapshots verify
 
-      - name: Notarize JAR with BoM
+      - name: Authenticate JAR with BoM
         #--> Run the GitHub action
         # uses: codenotary/vcn-notarize-bom-java-github-action@v1.0.0
+        # This 'env' block is necessary because github actions will try to pass the current variables for JAVA_HOME and JDK_HOME to the container
+        # only include this if your workflow uses the 'setup-java' actions or sets those environment varialbes (JAVA_HOME, PATH)
+        env:
+           JAVA_HOME: /usr/local/openjdk-17
+           PATH: /usr/local/openjdk-17/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
         uses: codenotary/vcn-authenticate-bom-java-github-action@main
         with:
           asset: target/codenotary-hello-world-maven-0.1.0.jar
