--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -21,6 +21,9 @@ jobs:
         run: mvn --batch-mode --update-snapshots compile
 
       - name: Authenticate Java Maven project with BoM
+        # This is only here to allow the job to continue
+        # by removing this line, the job will fail
+        continue-on-error: true
         #--> Run the GitHub action
         # This 'env' block is necessary because github actions will try to pass the current variables for JAVA_HOME and JDK_HOME to the container
         # only include this if your workflow uses the 'setup-java' actions or sets those environment varialbes (JAVA_HOME, PATH)
@@ -45,6 +48,9 @@ jobs:
         run: mvn --batch-mode --update-snapshots verify
 
       - name: Authenticate JAR with BoM
+        # This is only here to allow the job to continue
+        # by removing this line, the job will fail
+        continue-on-error: true
         #--> Run the GitHub action
         # uses: codenotary/vcn-authenticate-bom-java-github-action@v1.0.0
         # This 'env' block is necessary because github actions will try to pass the current variables for JAVA_HOME and JDK_HOME to the container
