--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -34,6 +34,9 @@ jobs:
           cnil_host: ${{ secrets.CNIL_HOST }}
           cnil_grpc_port: ${{ secrets.CNIL_GRPC_PORT }}
           cnil_api_key: ${{ secrets.CNIL_API_KEY }}
+          # the signer ID is always required (even if it's the same as the one of the CNIL API key)
+          # - hardcode it here
+          signer_id: OggVCNAPIKey1
         #<--
         #--> or run the vcn Docker image directly (all vcn flags are available and passed through)
         # uses: docker://codenotary/vcn:bom-maven
